<resources>
    <string name="app_name">ToDoList</string>
    <string name="to_do_list">TO DO List</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="created">Created</string>
    <string name="pr">Pr</string>
    <string name="saveButtonText">Save</string>
    <string name="textViewTitleText">Title</string>
    <string name="textViewCreatedText">Created</string>
    <string name="textViewDeadlineText">Deadline</string>
    <string name="textViewPriorityText">Priority</string>
    <string name="textViewUsersText">Users</string>
    <string name="deleteButtonText">Delete</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="github">GitHub</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_out">Log out</string>
</resources>