<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TaskDetailsAddUpdateFragment">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="Insert task title"/>

    <EditText
        android:id="@+id/editTextUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextPriority"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="Insert users for current task"/>

    <EditText
        android:id="@+id/editTextDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/border"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="Format for deadline: 21.11.2021"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/border"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeadline"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="Format for created date: 10.11.2021"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border"
        android:backgroundTintMode="src_atop"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreated"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="Insert a number for priority"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F9F0F7"
        android:text="@string/deleteButtonText"
        android:textColor="#9F007C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsers"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewTitleText"
        android:textAlignment="center"
        android:textColor="#9F007C"
        app:layout_constraintEnd_toStartOf="@+id/editTextTitle"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewDeadlineText"
        android:textAlignment="center"
        android:textColor="#9F007C"
        app:layout_constraintEnd_toStartOf="@+id/editTextDeadline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewCreatedText"
        android:textAlignment="center"
        android:textColor="#9F007C"
        app:layout_constraintEnd_toStartOf="@+id/editTextDeadline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewPriorityText"
        android:textAlignment="center"
        android:textColor="#9F007C"
        app:layout_constraintEnd_toStartOf="@+id/editTextDeadline"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewUsersText"
        android:textAlignment="center"
        android:textColor="#9F007C"
        app:layout_constraintEnd_toStartOf="@+id/editTextDeadline"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>